*essentia-2.1_beta5 (30 Aug 2019)

  30 Aug 2019;  <bemeurer@gentoo.org> +essentia-2.1_beta5.ebuild, +metadata.xml:
  dev-libs/essentia: DUMPSTER FIRE