@@ -1,5 +1,5 @@
 DIST audio.zip 68911326 BLAKE2B 6b6bf697a5cbf7e50e641dcc718afeb4de7d5df750bbdc3316fa26ea3feefb9bfeb24c9445877d6977761a73bdfb489c99d527bfb3504437b86219ce28a2b2e8 SHA512 bcbe164563a6249a699155e212f9f2bf110033e39ef6e8920e30d3d61ab4db35e14d81a6d228213859e56a3e62d19197fdde28a2ded3a04221224cc722b51a25
 DIST essentia-2.1_beta5.tar.gz 68079452 BLAKE2B f208be0b91930777a531fb00f5aa9291c386369bba4930d749a128b350964b71b300bd5e814505234e9bb152c1db7db3aed18a06d4ff322235f8169c66376baa SHA512 7fce02739d8a4e40035f8d14071df38a25b4b7633e1e05fa8003947e9d4514e41b0095ef8eed7428902dc7046de3ce2f98438e791786c6c99057717695ee8820
-EBUILD essentia-2.1_beta5.ebuild 3177 BLAKE2B 730b65373fc6e314e3640a6efc67716d6b5acb5b5a248de57eb144d30f7a85a0b1c1bd251f6c1a7dec541c4f5add51a9bf59822e1bfe5dd9d4299bbdabd68005 SHA512 baae1c8c7c716ade81c740ef7529178c07fe4dbeac6c01e775cf9ccc0a2f62188ec193da177871c3fd16d78fcacf2fb1d9f6f72f588d9773c41ea8c6ed11b432
-MISC ChangeLog 151 BLAKE2B 383419dea026ed343489d66d0ab0abd2175dfb4e6a391c41ac6d06e79539314dd84911aaf1c9cda6be8533aeca2701795f1d621ae4e2c13598cc32e078d9a242 SHA512 04dedcfffbeacbccefbeaebb6a0e250f913f8be96b6bcdedd089353ba59e194b45dc33f2b9ffa4de05286b94867092c72c12bddb097684c0cb55ec3084d92607
+EBUILD essentia-2.1_beta5.ebuild 3083 BLAKE2B 595b8f4c41e28dac75b9888a65622d54c59a739b19dab08a2c9bd00348a75a8c7e08bbffffbb932908621c66d684455a9abe57e8fd7d9fdaacda6cb2b3302ecd SHA512 497b471f30f90335fcd1b60fd6bd0a14c0c758d3ce1b69efa1ae902c4c53ac21369435d650a6d82fe0499daee85279afb74cd3f852c5a772b2d70ed9c17b68e8
+MISC ChangeLog 252 BLAKE2B c86ec0a3bbc032dc345f532f716834253365864ec1f99e7cf193aa7412667c44639f597592158879ba358135c54362a0ba2b90c2b92f7916ce0b45317bbbc377 SHA512 f8b64b7da875b41dff2c8b6f1d4f45fc7ad3f0ac7bc1e09ec8ceb8574e3f78381b3ab36239b9c88c0a9c231597d22674d20ed59919791d21d9dec48baeeb1129
 MISC metadata.xml 1925 BLAKE2B f782f7c0635c5572e34586ab7cf99588d1412884378f99e977c7c3108e39834a37063ad2a54b0f2b76f360a1d3d061e0af328755ab9b0bfc7e3e58dd97579bb5 SHA512 7fdece8f34a618b666737dbd3e4b3d44180a9d678482473cbe6293afa5223f5874703bd1e372055968285eda3b4b790752c86e4f402296e4045934a8231a16f1
